<resources>
    <string name="app_name">PHR</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">로그인</string>

    <!-- Strings related to login -->
    <string name="prompt_email">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_up">회원가입</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to fragment1-->
    <string name="height">키(cm)</string>
    <string name="weight">몸무게(kg)</string>
    <string name="abo">일일 평균 심박수/심박 변이도/최저혈압/최고혈압/혈액형</string>
    <string name="medicine">복약목록</string>
    <string name="allergy">알러지/금기목록</string>
    <string name="history">과거력</string>
    <string name="sleepTime">수면시간</string>
    <string name="dailyStride">일일 걸음수</string>
    <string name="capture">건강검진 기록 입력하기(사진찍기)</string>
    <string name="manual">직접 입력하기</string>

    <!-- Strings related to fragment1_edit1-->
    <string name="edit">수정하기</string>


    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
